--- a/templates/ntp.conf.j2
+++ b/templates/ntp.conf.j2
@@ -20,10 +20,9 @@ restrict -6 ::1
 
 # Use public servers from the pool.ntp.org project.
 # Please consider joining the pool (http://www.pool.ntp.org/join.html).
-server 0.pool.ntp.org iburst
-server 1.pool.ntp.org iburst
-server 2.pool.ntp.org iburst
-server 3.pool.ntp.org iburst
+{% for server in ntp_servers %}
+server {{ server }} iburst
+{% endfor %}
 
 #broadcast 192.168.1.255 autokey	# broadcast server
 #broadcastclient			# broadcast client
